# EnterPrise-Admin-Dashboard

./: README.md
Documents/HacktoberFest_Projects/CFileImprovement/: CMakeLists.txt
Documents/My_Projects/Admin_Dashboard/Backend_Admin_Dashboard1/: db.sqlite3  diagnose_connection.py  manage.py  streamlit_app.py
Documents/My_Projects/Admin_Dashboard/Backend_Admin_Dashboard1/Backend_Admin_Dashboard1/: asgi.py  settings.py  urls.py  wsgi.py
Documents/My_Projects/Admin_Dashboard/Backend_Admin_Dashboard1/clients/: models.py  serializers.py  urls.py  views.py
Documents/My_Projects/Admin_Dashboard/Backend_Admin_Dashboard1/clients/migrations/: 0001_initial.py  0002_alter_clients_phone_no_alter_invoice_amount_and_more.py
Documents/My_Projects/Admin_Dashboard/Backend_Admin_Dashboard1/users/: models.py  permissions.py  serializers.py  urls.py  views.py
Documents/My_Projects/Admin_Dashboard/Backend_Admin_Dashboard1/users/migrations/: 0001_initial.py
